# committee

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README.rst  build.py  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.cspell/: general_terms.txt  python-packages.txt
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation.yml  feature-request.yml
.github/workflows/: docs.yml  release.yml  test.yml
_pages/: contact.html
_sources/: index.md.txt
committee/: __init__.py  __main__.py
docs/source/: conf.py  index.rst
docs/source/_pages/: contact.rst  contributing.rst
tests/doc_tests/: test_index_page.py
